# Encrypt

./: .gitignore  README.md  build.gradle  build_openssl.sh  settings.gradle
Server/: build.gradle
Server/src/main/java/chen/you/server/: Base64.java  JavaTest.java  KeyUtils.java  RSA.java
app/: build.gradle
app/src/androidTest/java/you/chen/encrypt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AESCrypto.cpp  BASE64Code.cpp  CMakeLists.txt  Java2Encrypt.cpp  Log.h  MD5Code.cpp  Padding.cpp  RSACrypto.cpp  encry_utils.cpp  encry_utils.h  native-lib.cpp
app/src/main/cpp/include/: AESCrypto.h  BASE64Code.h  MD5Code.h  Pading.h  RSACrypto.h
app/src/main/java/you/chen/encrypt/: EncryptUtils.java  Encrypts.java  LogUtils.java  Test.java
app/src/main/java/you/chen/encrypt/ui/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/you/chen/encrypt/: ExampleUnitTest.java
